plugins {
    id 'net.minecraftforge.gradle' version '[6.0,6.2)'
    id("com.github.johnrengelman.shadow") version "8.1.1"
}

java.toolchain.languageVersion = JavaLanguageVersion.of(17)

forgeVersion = "1.20.2"

minecraft {
    mappings channel: 'official', version: '1.20.2'
}

sourceSets.main.resources { srcDir 'src/generated/resources' }

repositories {
    maven {
        name = 'spongepowered-repo'
        url = 'https://repo.spongepowered.org/maven'
    }

    maven { url 'https://jitpack.io' }

    ivy {
        setUrl('https://download.nodecdn.net/containers/reforged/server/release')
        metadataSources {
            artifact()
        }
        patternLayout {
            artifact('[revision]/[artifact].[ext]')
        }
    }
    maven {
        url "https://maven.envyware.co.uk/releases"
    }
}

dependencies {
    minecraft 'net.minecraftforge:forge:1.20.2-48.0.30'

    implementation 'pixelmon:Pixelmon-1.20.2-9.2.8-server:9.2.8'

    implementation group: 'org.spongepowered', name: 'configurate-yaml', version: '4.2.0-COMMENTS'

    shadow group: 'com.cronutils', name: 'cron-utils', version: '9.2.0'

    shadow group: 'com.envyful.api', name: 'commons', version: '6.4.2'
    shadow (group: 'com.envyful.api', name: 'forge20', version: '6.4.2') {
        transitive = false;
    }
    shadow (group: 'com.envyful.api', name: 'reforged20', version: '6.4.2') {
        transitive = false;
    }
}

shadowJar {
    configurations = [project.configurations.shadow]
    setArchiveClassifier('')
    setArchiveBaseName("${rootProject.name}-Forge")

    relocate('org.spongepowered.configurate', 'com.envyful.reforged.bingo.shade.configurate')
    relocate('org.yaml.snakeyaml', 'com.envyful.reforged.bingo.shade.snakeyaml')
    relocate('io.leangen.geantyref', 'com.envyful.reforged.bingo.shade.geantyref')
    relocate('com.zaxxer', 'com.envyful.reforged.bingo.shade.hikari')
    relocate('org.slf4j', 'com.envyful.reforged.bingo.shade.slf4j')
    relocate('com.envyful.api', 'com.envyful.reforged.bingo.shade.envy.api')
    relocate('org.bstats', 'com.envyful.reforged.bingo.shade.bstats')
    relocate('org.apache.logging', 'com.envyful.reforged.bingo.shade.log4j')
    relocate('io.netty', 'com.envyful.reforged.bingo.shade.netty')
    relocate('io.lettuce', 'com.envyful.reforged.bingo.shade.lettuce')
    relocate('com.cronutils', 'com.envyful.reforged.bingo.shade.cronutils')
    relocate('com.cronutils', 'com.envyful.reforged.bingo.shade.cronutils')
    relocate('com.sun.el', 'com.envyful.reforged.bingo.shade.sun.el')
    relocate('org.reactivestreams', 'com.envyful.reforged.bingo.shade.reactivestreams')
    relocate('reactor', 'com.envyful.reforged.bingo.shade.reactor')

    exclude "com/google/**"
    exclude "javax/**"
    exclude "**/module-info.class"
    exclude "**/*.properties"
    exclude "**/*.xml"
    exclude "META-INF/versions/9/**"
    exclude "META-INF/native-image/**"
    exclude "META-INF/services/**"
}

jar.finalizedBy('shadowJar')
shadowJar.finalizedBy('reobfJar')
build.finalizedBy('versionedRelease')